--- a/src/components/item-list/item-list.css
+++ b/src/components/item-list/item-list.css
@@ -2,6 +2,10 @@
   cursor: pointer;
 }
 
+.list-group {
+  margin-bottom: 1rem;
+}
+
 .item-list .list-group-item:hover {
   background-color: #444;
 }
